src/test/resources/typeSystemTestModels/valid/expressions/LogicalNot.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

public class LogicalNot {
  boolean a = !true;
}