src/test/resources/typeSystemTestModels/invalid/expressions/ShiftOp.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.invalid.expressions;

public class ShiftOp {

  public void TestShiftOp(){
    double d = 1;
    float f = 2;
    double dd = d>>1;
    float ff = f << 2;
  }


}
